--- a/Readme
+++ b/Readme
@@ -3,7 +3,7 @@
 * Read instructions && click on link
 
 # How to get an RDP {6hrs only}
-## **I am using Apache-Guacamole here . If you know about it , you are a pro**
+* **I am using Apache-Guacamole here**
 * Fork this repo
 * Run The Workflow
 * Wait 2 min
